<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity"
    android:background="@color/primary_dark">

    <TextView
        android:id="@+id/register_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/oswald_medium"
        android:gravity="center"
        android:text="@string/register_heading_txt"
        android:textAllCaps="true"
        android:textColor="@color/primary_color"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/first_slide_desc"
        android:textColor="@color/dark_gray"
        android:layout_below="@id/register_heading" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_desc"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/email_hint"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_fname"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/fname_hint"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_lname"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/register_fname"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/lname_hint"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_fname"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/username_hint"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/register_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:backgroundTint="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/register_username" />

    <EditText
        android:id="@+id/register_repassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/repassword_hint"
        android:textColor="@color/primary_button"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/back_to_login_btn"
        android:layout_marginTop="24dp"
        android:background="@drawable/primary_btn_round"
        android:text="@string/signup_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/secondary_btn_round"
        android:text="@string/back_btn"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp" />
</RelativeLayout>