<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/primary_dark">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:backgroundTint="@color/dark_gray" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="75dp"
        app:tint="@color/dark_gray"
        app:srcCompat="@drawable/user_placeholder" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_img"
        android:layout_marginTop="40dp"
        android:text="@string/profile_email_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_email_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email"
        android:layout_marginTop="8dp"
        android:text="@string/profile_email_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email_data"
        android:layout_marginTop="24dp"
        android:text="@string/profile_name_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_name_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginTop="8dp"
        android:text="@string/profile_name_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name_data"
        android:layout_marginTop="24dp"
        android:text="@string/profile_username_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_username_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_username"
        android:layout_marginTop="8dp"
        android:text="@string/profile_username_txt"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/secondary_btn_round"
        android:text="@string/profile_logout_btn"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp" />
</RelativeLayout>